--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,27 @@
         <img [src]="video.imagenURL" class="card-img-top" alt="Falta la imagen papá que queres que haga">
         <div class="card-body">
             <h5 class="card-title">{{video.titulo}}</h5>
-            <button class="btn btn-outline-primary btn-block" (click)="verVideo(video.id)">Reproducir</button>
+            <button class="btn btn-outline-primary btn-block" (click)="verVideo(video)">Reproducir</button>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document" ng-if="videoSeleccionado">
+        <div class="modal-content">
+            <div class="modal-header" ng-if="videoSeleccionado.titulo">
+                <h5 class="modal-title" id="exampleModalLabel">{{videoSeleccionado.titulo}}</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+            </div>
+            <div class="modal-body">
+                <iframe id="ytplayer" type="text/html" width="640" height="360" src="http://www.youtube.com/embed/0S3enulCT8E?autoplay=1" frameborder="0">
+          </iframe>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+            </div>
         </div>
     </div>
 </div>
