--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,6 +10,7 @@
         </div>
     </div>
 </div>
+<button class="btn btn-block btn-outline-success" (click)="cargarMas()">Cargar más videos</button>
 
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document" ng-if="videoSeleccionado">
